<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/timg"
              android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/ed_email"
            android:gravity="center"
            android:hint="@string/edt_email"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/ed_regist_username"
            android:hint="@string/edt_username"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/ed_regist_password"
            android:gravity="center"
            android:hint="@string/edt_password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangle_with_stroke_dash"
            android:text="@string/btn_register"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/bt_go_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangle_with_stroke_dash"
            android:text="@string/btn_login2"/>
    </LinearLayout>
</LinearLayout>