<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/timg"
              android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_margin="@dimen/spacing_large"
            android:elevation="4dp"
            android:src="@drawable/drawer_avatar"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:hint="@string/edt_username"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:gravity="center"
            android:hint="@string/edt_password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>
        <CheckBox
            android:id="@+id/cb_auto"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="12dip"
            android:text="记住我的登录状态"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:background="@drawable/bg_rectangle_with_stroke_dash"
            android:text="@string/btn_login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_go_regist"
            android:background="@drawable/bg_rectangle_with_stroke_dash"
            android:text="@string/btn_register"/>
    </LinearLayout>
</LinearLayout>